# ducktb-rs

./: ._old.rs.swp  .config.rs.swp  .conn.rs.swp  .main.rs.swp  .types.rs.swp  Cargo.toml  _old.rs  config.rs  config.toml  conn.rs  main.rs  types.rs
.cargo/: config.toml
conn/: .json_v1.rs.swp  .json_v2.rs.swp  json_v1.rs  json_v2.rs  msgpack_v1.rs
docs/: protocol.md
src/: config.rs  conn.rs  main.rs  server.rs  types.rs
src/conn/: json_v1.rs  json_v2.rs  msgpack_v1.rs
src/server/: listener.rs  talker.rs
src/server/listener/: proto_json_v2.rs  proto_msgpack_v1.rs
