[package]
name = "ducktb-sv1"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
derive-new = "0.5.9"
derive_more = "0.99.17"
futures = "0.3.29"
futures-channel = "0.3.28"
futures-util = "0.3.28"
nix = "0.26.2"
nutype = { version = "0.3.1", features = ["serde"] }
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_derive = "1.0.190"
serde_json = "1.0.107"
tokio = { version = "1.29.1", features = ["net", "sync", "tokio-macros", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.0"

[[bin]]
name = "ducktb-sv1"
path = "main.rs"
